tests/ui/traits/trait-upcasting/type-checking-test-4.polonius.stderr
error: lifetime may not live long enough
  --> $DIR/type-checking-test-4.rs:15:13
   |
LL | fn test_wrong1<'a>(x: &dyn Foo<'static>, y: &'a u32) {
   |                -- lifetime `'a` defined here
LL |     let _ = x as &dyn Bar<'static, 'a>; // Error
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/type-checking-test-4.rs:20:13
   |
LL | fn test_wrong2<'a>(x: &dyn Foo<'static>, y: &'a u32) {
   |                -- lifetime `'a` defined here
LL |     let _ = x as &dyn Bar<'a, 'static>; // Error
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/type-checking-test-4.rs:26:5
   |
LL | fn test_wrong3<'a>(x: &dyn Foo<'a>) -> Option<&'static u32> {
   |                -- lifetime `'a` defined here
LL |     let y = x as &dyn Bar<'_, '_>;
LL |     y.get_b() // ERROR
   |     ^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/type-checking-test-4.rs:31:5
   |
LL | fn test_wrong4<'a>(x: &dyn Foo<'a>) -> Option<&'static u32> {
   |                -- lifetime `'a` defined here
LL |     <_ as Bar>::get_b(x) // ERROR
   |     ^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/type-checking-test-4.rs:36:5
   |
LL | fn test_wrong5<'a>(x: &dyn Foo<'a>) -> Option<&'static u32> {
   |                -- lifetime `'a` defined here
LL |     <_ as Bar<'_, '_>>::get_b(x) // ERROR
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/type-checking-test-4.rs:44:5
   |
LL | fn test_wrong6<'a>(x: &dyn Foo<'a>) -> Option<&'static u32> {
   |                -- lifetime `'a` defined here
...
LL |     z.get_b() // ERROR
   |     ^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 6 previous errors

